# pygbm

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  setup.py
docs/: conf.py  index.rst  likelihood_calc.ipynb  usage.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  usage.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: api.rst.txt
frontend/: Dockerfile
project_app/backend/: main.py  requirements.txt
project_app/frontend/app/: page.tsx
src/pygbm/: __init__.py  api.py  base.c  base.py  gbm_simulator.c  gbm_simulator.py  main.c  main.py
tests/: __init__.py  conftest.py  test_api.py  test_gbm_simulator.py
