# pyproject.toml

[build-system]
requires = ["setuptools>=69", "wheel", "Cython>=0.29", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[project]
name = "pygbm"
version = "0.1.0"
description = "Geometric Brownian Motion simulator package"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Basia Koch"}]
keywords = ["geometric brownian motion", "stochastic process", "simulation", "finance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Dependencies your package needs to run
dependencies = [
    "numpy>=1.23",
    "matplotlib>=3.7",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

# Optional dependencies for testing
[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Tell setuptools where your code lives (modern src/ layout)
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pygbm"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
